# typeWriter

./: .gitignore  README.md  metadata.json  pyproject.toml
src/: main.py
